--- a/src/pages/WonderMatch/WonderMatch.scss
+++ b/src/pages/WonderMatch/WonderMatch.scss
@@ -88,6 +88,7 @@
             p {
                 font-size: 1rem;
                 width: 100%;
+                text-align: justify;
             }
         }
         .img6 {
